# magic-bill

./: .gitignore  DEVICE_LICENSING.md  README.md  THEME_GUIDELINES.txt  bump_styles.cjs  easy_bill_backup.patch  extract.txt  firestore.rules  generate_keys.js  index.html  package-lock.json  package.json  replace_css.cjs  set_new_secret.cjs  set_secret.cjs  swap.cjs  swap.js  tauri.key  tauri.key.pub  temp_priv_no_bom.txt  test_key.key  update_fg_colors.cjs
.github/workflows/: release.yml
src/: App.css  App.tsx  device.ts  firebase.ts  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Account.tsx  BillSettings.tsx  Billing.tsx  Dashboard.tsx  ExpenseTracker.tsx  GeneralSettings.tsx  MenuManagement.tsx  PrinterSettings.tsx  Reports.tsx  Settings.tsx  StaffManagement.tsx
src/theme/: ThemeContext.tsx  components.css  theme.css
