[package]
name = "magic-bill"
version = "0.2.6"
description = "Magic Bill - Restaurant Management System"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
winapi = { version = "0.3.9", features = ["winspool", "libloaderapi", "errhandlingapi"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

